# Volchay-Voicer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: windows.yml
cmake/: FindPortAudio.cmake  FindRubberBand.cmake
qml/: Main.qml
qml/ui/: DarkButton.qml  DarkProgressBar.qml  DarkSlider.qml  DarkTabButton.qml
src/: main.cpp
src/app/: AppInfo.h
src/audio/: AudioDeviceModel.cpp  AudioDeviceModel.h  AudioEngine.cpp  AudioEngine.h  AudioEngineController.cpp  AudioEngineController.h  AudioTypes.h  PortAudioRuntime.cpp  PortAudioRuntime.h
src/config/: AppSettings.cpp  AppSettings.h
src/dsp/: AudioEffect.h  BasicEffects.cpp  BasicEffects.h  EffectSettings.h  EffectsChain.cpp  EffectsChain.h
src/logging/: LogController.cpp  LogController.h  Logger.cpp  Logger.h
src/presets/: PresetModel.cpp  PresetModel.h
tests/: dsp_tests.cpp  preset_tests.cpp
